--- a/about.html
+++ b/about.html
@@ -81,13 +81,14 @@
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link active">Sobre Nosotros</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
-                        <div class="nav-item dropdown">
+                        <a href="proyect.html" class="nav-item nav-link">Proyectos</a>
+                      <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Paginas</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
                                 <a href="testimonial.html" class="dropdown-item">Vista 1 </a>
                                 <a href="testimonial.html" class="dropdown-item">Vista 2</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
@@ -112,45 +113,15 @@
     </div>
     <!-- Header End -->
 
-
     <!-- About Start -->
     <div class="container-fluid py-5">
-        <div class="container pt-5">
-            <div class="row">
-                <div class="col-lg-6" style="min-height: 500px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/molinos.jpg" style="object-fit: cover;">
-                    </div>
-                </div>
-                <div class="col-lg-6 pt-5 pb-lg-5">
-                    <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
-                        <h6 class="text-orange text-uppercase" style="letter-spacing: 5px;">Sobre Nosotros</h6>
-                        <h1 class="mb-3">Soliciones de Calidad</h1>
-                        <p>Ofrecemos Servicios en la fabricación de Salas Eléctricas y tablero UPS. Además contamos con el equipo necesario para la reparación, mantención y fabricación de cabinas insonorizadas para Grupos Electrógenos desde los 50[KVA] hasta los 1500[KVA]. Contamos con alta experiencia en la fabricación de estanques de combustible para grupos electógenos, además de tanques externos de respaldo de hasta 30.000 litros. Contamos con más de 8 años de experiencia en el rubro y destacamos por entregar soluciones que sean de calidad y confianza</p>
-                        <div class="row mb-4">
-                            <div class="col-6">
-                                <img class="img-fluid" src="img/molinos4.jpg" alt="">
-                            </div>
-                            <div class="col-6">
-                                <img class="img-fluid" src="img/molinos5.2.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
-
-    <!-- About Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
+        <div class="container bg-white" style="padding: 10px;">
             <div class="row align-items-center">
                 <div class="col-lg-5">
                     <img class="img-fluid" src="img/molinos.jpg" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
-                    <h6 class="text-orange text-uppercase font-weight-medium mb-3">Sobre Nosotros</h6>
+                    <h6 class="text-orange text-uppercase font-weight-medium mb-3">Sobre ElectroSAI</h6>
                     <h1 class="mb-4">Soluciones de Calidad</h1>
                     <p class="mb-2">Ofrecemos Servicios en la fabricación de Salas Eléctricas y tablero UPS. Además contamos con el equipo necesario para la reparación,
                          mantención y fabricación de cabinas insonorizadas para Grupos Electrógenos desde los 50[KVA] hasta los 1500[KVA]. Contamos con alta experiencia
@@ -165,12 +136,12 @@
 
     <!-- Feature Start -->
     <div class="container-fluid pb-5">
-        <div class="container pb-5">
+        <div class="container pb-5 bg-white" style="padding: 10px;">
             <div class="row">
                 <div class="col-md-4">
                     <div class="d-flex mb-4 mb-lg-0">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-award text-white"></i>
+                            <i class="fa fa-2x fa-trophy text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
                             <h5 class="">Líderes en la Industria</h5>
@@ -181,7 +152,7 @@
                 <div class="col-md-4">
                     <div class="d-flex mb-4 mb-lg-0">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-award text-white"></i>
+                            <i class="fa fa-2x fa-thumbs-up text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
                             <h5 class="">Resultados Satisfactorios</h5>
@@ -192,7 +163,7 @@
                 <div class="col-md-4">
                     <div class="d-flex mb-4 mb-lg-0">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-primary mr-3" style="height: 100px; width: 100px;">
-                            <i class="fa fa-2x fa-award text-white"></i>
+                            <i class="fa fa-2x fa-cogs text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
                             <h5 class="">Soluciones de Ingeniería</h5>
@@ -204,87 +175,6 @@
         </div>
     </div>
     <!-- Feature End -->
-
-    <!-- Team Start -->
-    <div class="container-fluid py-5">
-        <div class="container pt-5 pb-3">
-            <div class="text-center mb-3 pb-3">
-                <h6 class="text-electro text-uppercase" style="letter-spacing: 5px;">Equipo</h6>
-                <h1>Nuestro Equipo de Trabajo</h1>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                    <div class="team-item bg-white mb-4">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h5 class="text-truncate">Name</h5>
-                            <p class="m-0">Cargo</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                    <div class="team-item bg-white mb-4">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h5 class="text-truncate">Name</h5>
-                            <p class="m-0">Cargo</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                    <div class="team-item bg-white mb-4">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h5 class="text-truncate">Name</h5>
-                            <p class="m-0">Cargo</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                    <div class="team-item bg-white mb-4">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h5 class="text-truncate">Name</h5>
-                            <p class="m-0">Cargp</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Team End -->
 
 
     <!-- Footer Start -->
