--- a/service.html
+++ b/service.html
@@ -81,13 +81,7 @@
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
                         <a href="service.html" class="nav-item nav-link active">Servicios</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Paginas</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="testimonial.html" class="dropdown-item">Vista 1 </a>
-                                <a href="testimonial.html" class="dropdown-item">Vista 2</a>
-                            </div>
-                        </div>
+                        <a href="proyect.html" class="nav-item nav-link">Proyectos</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
@@ -112,39 +106,37 @@
     </div>
     <!-- Header End -->
 
-
     <!-- Service Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-               <!-- <h6 class="text-electro text-uppercase" style="letter-spacing: 5px;">Servicios</h6> -->
-                <h1>Servicios</h1>
-            </div>
+                <h1>Diseño, Fabricación, Mantención y Reparación </h1>
+            </div> 
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-route mx-auto mb-4"></i>
+                        <i class="fa fa-2x fa-tools mx-auto mb-4"></i>
                         <h5 class="mb-2">Fabricación de Salas Eléctricas</h5>
                         <p class="m-0">Módulos acondicionados para alojar equipos eléctricos como inversores, tableros, sistemas de control y grupos electrógenos.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
+                        <i class="fa fa-2x fa-bolt mx-auto mb-4"></i>
                         <h5 class="mb-2">Grupos Electrógenos</h5>
                         <p class="m-0">Instalación, mantención y reparación especializada para asegurar operación continua.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
+                        <i class="fa fa-2x fa-volume-mute mx-auto mb-4"></i>
                         <h5 class="mb-2">Cabinas Insonorizadas</h5>
                         <p class="m-0"> Fabricación personalizada de Gabinetes Insonorizados para garantizar requerimientos de cliente.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class="fa fa-2x fa-route mx-auto mb-4"></i>
+                        <i class="fa fa-2x fa-gas-pump mx-auto mb-4"></i>
                         <h5 class="mb-2">Estanques de Combustible</h5>
                         <p class="m-0">Fabricación de estanques de combustibles para Grupos Generadores para una mayor autonomía. Además de estanques externos de hasta de 30.000 litros. </p>
                     </div>
@@ -158,7 +150,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item bg-white text-center mb-2 py-5 px-4">
-                        <i class=" fa-2x fas fa-pipe mx-auto mb-4"></i>
+                        <i class="fa fa-2x  fa-water mx-auto mb-4"></i>
                         <h5 class="mb-2">Fabricación de Pipelines</h5>
                         <p class="m-0">Diseño y fabricación especializada de tuberías para conducción segura y eficiente de fluidos industriales.</p>
                     </div>
@@ -167,56 +159,6 @@
         </div>
     </div>
     <!-- Service End -->
-
-
-    <!-- Testimonial Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="text-center mb-3 pb-3">
-                <h6 class="text-electro text-uppercase" style="letter-spacing: 5px;">Testimonios</h6>
-                <h1>Que Dicen Nuestros Clientes</h1>
-            </div>
-            <div class="owl-carousel testimonial-carousel">
-                <div class="text-center pb-4">
-                    <img class="img-fluid mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;" >
-                    <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                        </p>
-                        <h5 class="text-truncate">Client Name</h5>
-                        <span>Profession</span>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <img class="img-fluid mx-auto" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;" >
-                    <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                        </p>
-                        <h5 class="text-truncate">Client Name</h5>
-                        <span>Profession</span>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <img class="img-fluid mx-auto" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;" >
-                    <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                        </p>
-                        <h5 class="text-truncate">Client Name</h5>
-                        <span>Profession</span>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <img class="img-fluid mx-auto" src="img/testimonial-4.jpg" style="width: 100px; height: 100px;" >
-                    <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam
-                        </p>
-                        <h5 class="text-truncate">Client Name</h5>
-                        <span>Profession</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Testimonial End -->
 
 
     <!-- Footer Start -->
