Todos los cambios

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-                <h6 class="text-electro text-uppercase font-weight-medium" style="letter-spacing: 5px;">Servicios</h6>
+                <h6 class="text-sai text-uppercase font-weight-medium" style="letter-spacing: 5px;">Servicios</h6>
                 <h1>Diseño, Fabricación, Mantención y Reparación </h1>
             </div> 
             <div class="row">
